@@ -14,7 +14,7 @@ Architecture: all
 Depends: zentyal-core (>= 4.0), zentyal-core (<< 4.1),
          zentyal-common, zentyal-objects, zentyal-services,
          iproute, vlan, net-tools, dnsutils, libnet-ip-perl, dhcp3-client,
-         iptables, libnet-arp-perl, wget, traceroute, ddclient, ppp,
+         iptables, libnet-arp-perl, wget, traceroute, ppp,
          libio-interface-perl, debconf, bridge-utils, wakeonlan, ifenslave-2.6,
          resolvconf, ${misc:Depends}
 Description: Zentyal - Network Configuration
