@@ -1,46 +1,0 @@
-<%args>
-$login
-$password
-$hostname
-$serviceData
-$server
-@gws
-$cmd
-</%args>
-<%init>
-my $protocol = $serviceData->{protocol};
-my $use = $serviceData->{use};
-</%init>
-# /etc/ddclient.conf
-
-# Default global variables
-pid=/var/run/ddclient.pid
-ssl=yes
-
-login=<% $login %>
-password='<% $password %>'
-
-protocol=<% $protocol %>
-server=<% $server %>
-% if ( scalar(@gws) == 0 ) {
-%    if ($use eq 'web') {
-use=web, web=<% $serviceData->{web} %>, web-skip='<% $serviceData->{web_skip} %>'
-
-%    } elsif ($use eq 'if') {
-use=if, if=<% $serviceData->{iface} %>
-
-%    } elsif ($use eq 'linksys') {
-use=linksys, fw=<% $serviceData->{fw} %>, fw-login=<% $serviceData->{fw_login} %>, fw-password=<% $serviceData->fw_password %>
-
-%    } elsif ($use eq 'fw') {
-use=linksys, fw=<% $serviceData->{fw} %>, fw-skip=<% $serviceData->{fw_skip} %>
-
-%    }
-<% $hostname %>
-% } else {
-%    foreach my $gw (@gws) {
-%      my $gwName = $gw->{gw};
-%      my $domain = $gw->{domain};
-use=cmd, cmd='<% "$cmd $gwName" %>' <% "${domain}.$hostname" %>
-%    }
-% }
