@@ -1,16 +1,0 @@
-<%args>
-$enabled
-</%args>
-# /etc/default/ddclient
-
-# Set to "true" if ddclient should be run every time a new ppp connection is
-# established. This might be useful, if you are using dial-on-demand.
-run_ipup="false"
-
-# Set to "true" if ddclient should run in daemon mode.
-run_daemon="<% $enabled ? 'true' : 'false' %>"
-
-# Set the time interval between the updates of the dynamic DNS name in seconds.
-# This option only takes effect if the ddclient runs in daemon mode.
-daemon_interval="300"
-
