@@ -1,3 +1,5 @@
+HEAD
+	+ Remove no longer maintained ddclient integration
 4.0
 	+ Drop Zentyal-provided Dynamic DNS
 	+ WAN failover now uses cron instead of old events module
